[package]
edition = "2018"
name = "axum-test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {git = "https://github.com/tokio-rs/axum.git", tag = "v0.1.3"}

http = "0.2"
http-body = "0.4.3"
hyper = "0.14"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio = {version = "1", features = ["full"]}
tokio-util = "0.6"
tower = {version = "0.4", features = ["util", "buffer", "make", "timeout"]}
tower-http = {version = "0.1", features = ["add-extension", "map-response-body", "trace"]}
tracing = "0.1"
tracing-subscriber = "0.2"
uuid = {version = "0.8", features = ["v4", "serde"]}
